; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rts5208/extr_rtsx_chip.c_rtsx_release_chip.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rts5208/extr_rtsx_chip.c_rtsx_release_chip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtsx_chip = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rtsx_release_chip(%struct.rtsx_chip* %0) #0 {
  %2 = alloca %struct.rtsx_chip*, align 8
  store %struct.rtsx_chip* %0, %struct.rtsx_chip** %2, align 8
  %3 = load %struct.rtsx_chip*, %struct.rtsx_chip** %2, align 8
  %4 = call i32 @xd_free_l2p_tbl(%struct.rtsx_chip* %3)
  %5 = load %struct.rtsx_chip*, %struct.rtsx_chip** %2, align 8
  %6 = call i32 @ms_free_l2p_tbl(%struct.rtsx_chip* %5)
  %7 = load %struct.rtsx_chip*, %struct.rtsx_chip** %2, align 8
  %8 = getelementptr inbounds %struct.rtsx_chip, %struct.rtsx_chip* %7, i32 0, i32 1
  store i64 0, i64* %8, align 8
  %9 = load %struct.rtsx_chip*, %struct.rtsx_chip** %2, align 8
  %10 = getelementptr inbounds %struct.rtsx_chip, %struct.rtsx_chip* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  ret void
}

declare dso_local i32 @xd_free_l2p_tbl(%struct.rtsx_chip*) #1

declare dso_local i32 @ms_free_l2p_tbl(%struct.rtsx_chip*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
